--- a/front-end/src/styles/dashboard.css
+++ b/front-end/src/styles/dashboard.css
@@ -1,18 +1,18 @@
+
 .sidebar{
 
     margin: 0;
     padding-top:25vh;
-    background-color: #1E1E21FF;
+    background: linear-gradient(45deg, #86b7fe, #49a09d, #5f2c82);
     position: fixed;
     height: 100vh;
     width: 250px;
     overflow: hidden;
 }
 
-.sidebar a{
-
+.sidebar a {
     display: block;
-    color: #cce5ff;
+    color: #ffffff;
     padding: 18px;
     text-decoration: none;
     font-size: 25px;
