--- a/front-end/src/styles/ReviewerResearchUploads.css
+++ b/front-end/src/styles/ReviewerResearchUploads.css
@@ -2,12 +2,13 @@ html{
     height: 100%;
 }
 
-body {
-    margin: 0;
-    background: linear-gradient(45deg, #13653f, #49a09d, #084298, #31d2f2);
-    font-family: sans-serif;
-    font-weight: 100;
-}
+/*body {*/
+/*    margin: 0;*/
+/*    background: linear-gradient(45deg, #13653f, #49a09d, #084298, #31d2f2);*/
+/*    font-family: sans-serif;*/
+/*    font-weight: 100;*/
+/*}*/
+
 .rev-workshop-upload-body {
     position: absolute;
     top: 50%;
