--- a/front-end/src/styles/home.css
+++ b/front-end/src/styles/home.css
@@ -31,5 +31,10 @@
 
 .imgHeader{
     width: 100%;
-    height: 30vh
+    height: 30vh;
+    background-image: url(../images/header.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
