--- a/front-end/src/styles/dashboard.css
+++ b/front-end/src/styles/dashboard.css
@@ -3,7 +3,7 @@
 
     margin: 0;
     padding-top:25vh;
-    background: linear-gradient(45deg, #86b7fe, #49a09d, #5f2c82);
+    background: linear-gradient(45deg, #00002d, #000013, #000d3a);
     position: fixed;
     height: 100vh;
     width: 250px;
@@ -29,20 +29,36 @@
 }
 
 .sidebar a:active{
-    border-left: 5px solid #5584ff;
-    background: #122143;
+    text-color: #cce5ff;
+    border-left: 5px solid #f3eeed;
+    background: #e0e3ea;
 }
 
 .content{
 
+    width: 180vh;
     margin-left: 250px;
     padding: 1px 16px;
     height: 100vh;
+    position: fixed;
+    background-color: #cdcbdd;
 
 }
 
 @media screen and (max-width: 700px) {
     .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .content {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .table {
         width: 100%;
         height: auto;
         position: relative;
@@ -56,4 +72,27 @@
         text-align: center;
         float: none;
     }
+
+    .table {
+        text-align: center;
+        float: none;
+    }
 }
+
+.table{
+
+    color: #38b715;
+}
+
+.table tr th {
+    text-align: center;
+
+}
+
+.table tr td {
+    text-align: center;
+}
+
+
+
+
