--- a/front-end/src/styles/home.css
+++ b/front-end/src/styles/home.css
@@ -1,6 +1,15 @@
 .bg-cover {
-    background-image:  #000;
-    background-size: cover !important;
+
+    background-position: center;
+    background-repeat: no-repeat;
+
+    position: relative;
+
+
+    background-image: url("../images/bg2.png");
+
+
+    background-size: cover;
 }
 
 .height{
@@ -29,12 +38,3 @@
     letter-spacing: 10px;
 }
 
-.imgHeader{
-    width: 100%;
-    height: 30vh;
-    background-image: url(../images/header.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
