--- a/front-end/src/styles/news.css
+++ b/front-end/src/styles/news.css
@@ -1,4 +1,21 @@
 .body {margin:2rem;}
+.back{
+    background-position: center;
+    background-repeat: no-repeat;
+
+    position: relative;
+
+
+    background-image: url("../images/newsbg.png");
+
+
+    background-size: cover;
+}
+.imgs img{
+    width:100%;
+    height:40vh ;
+
+}
 
 /* Small devices (landscape phones, 544px and up) */
 @media (min-width: 544px) {
